k8sexample/banana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banana-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: banana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
